        PR middle-end/16026         * function.c (assign_parms): Don't abort for overaligned PARALLEL.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@83525 138bc75d-0d04-0410-961f-82ee72b054a4